<resources>
    <string name="app_name">GOcery</string>
    <string name="navigation_drawer_open">GOcery</string>
    <string name="navigation_drawer_close">GOcery</string>

    <string name="app_tagline">All your groceries in one place</string>
    <string name="logo_desc">GOcery App logo with text</string>
    <string name="bg_desc">Grocery Stock Image by Thomas Lee </string>

    <!-- Authentication Strings -->
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="sign_up_link">Register here</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm">Confirm Password</string>
    <string name="prompt_address">Household Address</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Manage Household   -->
    <string name="home_lbl">Household Address</string>
    <string name="members_lbl">Family Members</string>
    <string name="profile_desc">Profile Icon</string>
    <string name="add_desc">Add Icon</string>
    <string name="member1">Father</string>
    <string name="RB1">Admin</string>
    <string name="RB2">Family representative</string>
    <string name="save_btn">Save Changes</string>
    <string name="add_btn">Add Member</string>
    <string name="remove_btn">Remove Member</string>
    <string name="cancel_txt">Cancel</string>
    <string name="lock_txt">Lock Profile</string>

    <!-- Grocery Strings -->
    <string name="CurrentGroceryList">Current Grocery List</string>
    <string name="CompletedPurchases">Completed Purchases</string>
    <string name="ItemInList">Items in list</string>
    <string name="UpdatedBy">Updated By</string>
    <string name="LastUpdatedOn">Last Updated On</string>

    <!-- Expense Tracker module -->
    <!-- Expense Tracker module -->
    <string name="menu_item_expense_home">Manage Expenses</string>
    <string name="menu_item_add_expense">Add Expense</string>
    <string name="expenses_list">Expenses List</string>
    <string name="expense_name">Name</string>
    <string name="expense_date">Date</string>
    <string name="expense_type">Type</string>
    <string name="expense_desc">Description</string>
    <string name="expense_total_cost">Total Cost</string>
    <string name="update_expense">Update</string>
    <string name="expense_type_dropdown_menu">Choose Type</string>
    <string name="expense_type_overview">Expense Type Overview</string>

    <string-array name="expense_type">
        <item>Toiletries &amp; Cosmetics</item>
        <item>Entertainment</item>
        <item>Food &amp; Dining</item>
        <item>Auto &amp; Transport</item>
        <item>Clothing</item>
        <item>Health &amp; Fitness</item>
        <item>Furniture &amp; Appliances</item>
        <item>Groceries</item>
        <item>Other</item>
    </string-array>

    <!-- Card and vouchers   -->
    <string name="card_voucher_menu_title">Cards &amp; Vouchers</string>

    <!-- Receipt OCR module -->
    <string name="receipt_ocr_get_image_fab">Get Image</string>
    <string name="receipt_ocr_take_image_from_camera_btn">Take Image from Camera</string>
    <string name="receipt_ocr_take_from_camera_textview">Take from Camera</string>
    <string name="receipt_ocr_choose_image_from_gallery_btn">Choose Image from Gallery</string>
    <string name="receipt_ocr_choose_from_gallery_textview">Choose from Gallery</string>
    <string name="receipt_ocr_scrollview">The extracted texts will appear here.</string>
    <string name="receipt_ocr_selected_image_imageview">Selected Image</string>
<!--    <string name="receipt_ocr_header">RECEIPT OCR RESULT</string>-->
    <string name="receipt_ocr_header">Receipt OCR Result</string>
    <string name="receipt_ocr_selected_image">Selected Image</string>
    <string name="receipt_ocr_selected_image_title">SELECTED IMAGE</string>
    <string name="receipt_ocr_copy_text_btn">Copy Text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_address">No. 8, Jalan Joran Empat 19/24D, 40300, Shah Alam, Selangor</string>
</resources>