<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grocery_stock"
    android:contentDescription="@string/bg_desc"
    android:theme="@style/ThemeOverlay.GOcery.FullscreenContainer"
    tools:context=".authentication.LandingFragment">

    <LinearLayout
        android:id="@+id/LLOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".8"
        android:background="@color/white"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="46dp" />

    <ImageView
        android:id="@+id/IVLogo"
        android:layout_width="214dp"
        android:layout_height="180dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="55dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/gocery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BTNLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/primary_green"
        android:text="@string/action_sign_in_short"
        app:layout_constraintBottom_toTopOf="@+id/TVRegister_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TVTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="112dp"
        android:text="@string/app_tagline"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVLogo" />

    <TextView
        android:id="@+id/TVRegister_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="auto"
        android:text="@string/sign_up_link"
        android:textColor="#2E7D32"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/TVRegister_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sign_up_text"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TVRegister_link"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>