<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manageprofiles.EditProfileFragment">

    <ImageView
        android:id="@+id/IVProfile"
        android:layout_width="136dp"
        android:layout_height="143dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="138dp"
        android:background="@color/light_gray"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ETName"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="36dp"
        android:inputType="textPersonName"
        android:text="@string/member1"
        app:layout_constraintBottom_toTopOf="@+id/TVRoles_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVProfile" />

    <TextView
        android:id="@+id/TVRoles_lbl"
        style="@style/household_cards.label"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:text="Roles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETName" />

    <RadioButton
        android:id="@+id/RBAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="304dp"
        android:text="@string/RB1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVRoles_lbl" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="206dp"
        android:text="@string/RB2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RBAdmin" />

    <TextView
        android:id="@+id/TVLock"
        style="@style/household_cards.label"
        android:layout_marginStart="35dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="205dp"
        android:text="Lock Profile"
        app:layout_constraintEnd_toStartOf="@+id/SWLock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

    <Switch
        android:id="@+id/SWLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETName"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:ems="4"
        android:hint="Enter pin"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVLock"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/BTNSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary_green"
        android:text="@string/save_btn"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BTNDelete" />

    <Button
        android:id="@+id/BTNDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/remove_btn"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>